@@ -1,3 +1,9 @@
+2001-04-23  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/posix/pathconf.c (__pathconf): For _PC_ASYNC_IO test
+	whether named file is a regular file or a block device.
+	* sysdeps/posix/fpathconf.c (__fpathconf): Likewise.
+
 2001-04-23  Andreas Jaeger  <aj@suse.de>
 
 	* nscd/nscd.h: Add noreturn attribute for start_threads.
